// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TextField correctly 1`] = `
.emotion-5 {
  cursor: auto;
  display: inline-block;
  position: relative;
  width: 343px;
}

.emotion-3 {
  border-radius: 4px;
  position: relative;
}

.emotion-0 {
  color: #757575;
  cursor: text;
  font-size: 16px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  pointer-events: auto;
  position: absolute;
  -webkit-transform: scale(1) translate(8px,17px);
  -ms-transform: scale(1) translate(8px,17px);
  transform: scale(1) translate(8px,17px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: all 450ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: all 450ms cubic-bezier(0.23,1,0.32,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 1;
}

.emotion-1 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
}

.emotion-2 {
  background-color: #FFF;
  border: solid 1px #BDBDBD;
  border-radius: 4px;
  box-sizing: border-box;
  color: #424242;
  font-size: 16px;
  height: 56px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  padding-top: 25px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  position: relative;
  width: 100%;
  -webkit-opacity: 1px;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.emotion-4 {
  color: #B30029;
  font-size: 12px;
  margin-top: 2px;
  margin-left: 1px;
  opacity: 0;
  display: none;
  pointer-events: none;
  text-align: left;
  -webkit-transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
}

<div>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="test_id"
      >
        Email
      </label>
      <div
        className="emotion-1"
        id="hint_test_id"
      >
        Enter your email address
      </div>
      <input
        aria-describedby="hint_test_id"
        aria-invalid={false}
        autoComplete="on"
        className="emotion-2"
        defaultValue={null}
        disabled={false}
        id="test_id"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="email"
      />
    </div>
    <div
      aria-atomic={true}
      aria-live="assertive"
      className="emotion-4"
      id="error_test_id"
    />
  </div>
</div>
`;

exports[`renders TextField without label correctly 1`] = `
.emotion-4 {
  cursor: auto;
  display: inline-block;
  position: relative;
  width: 343px;
}

.emotion-2 {
  border-radius: 4px;
  position: relative;
}

.emotion-0 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
}

.emotion-1 {
  background-color: #FFF;
  border: solid 1px #BDBDBD;
  border-radius: 4px;
  box-sizing: border-box;
  color: #424242;
  font-size: 16px;
  height: 56px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  padding-top: 25px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  position: relative;
  width: 100%;
  -webkit-opacity: 1px;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.emotion-3 {
  color: #B30029;
  font-size: 12px;
  margin-top: 2px;
  margin-left: 1px;
  opacity: 0;
  display: none;
  pointer-events: none;
  text-align: left;
  -webkit-transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
}

<div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-0"
        id="hint_test_id"
      >
        Enter your email address
      </div>
      <input
        aria-describedby="hint_test_id"
        aria-invalid={false}
        aria-label="enter email"
        autoComplete="on"
        className="emotion-1"
        defaultValue={null}
        disabled={false}
        id="test_id"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="email"
      />
    </div>
    <div
      aria-atomic={true}
      aria-live="assertive"
      className="emotion-3"
      id="error_test_id"
    />
  </div>
</div>
`;

exports[`uses a custom theme for all child components if one is provided 1`] = `
.emotion-5 {
  cursor: auto;
  display: inline-block;
  position: relative;
  width: 343px;
}

.emotion-3 {
  border-radius: 4px;
  position: relative;
}

.emotion-0 {
  color: #757575;
  cursor: text;
  font-size: 16px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  pointer-events: auto;
  position: absolute;
  -webkit-transform: scale(1) translate(8px,17px);
  -ms-transform: scale(1) translate(8px,17px);
  transform: scale(1) translate(8px,17px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: all 450ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: all 450ms cubic-bezier(0.23,1,0.32,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 1;
}

.emotion-1 {
  color: #BDBDBD;
  cursor: inherit;
  font-size: 16px;
  position: absolute;
  opacity: 0;
  -webkit-transform: scale(1) translate(9px,26px);
  -ms-transform: scale(1) translate(9px,26px);
  transform: scale(1) translate(9px,26px);
  -webkit-transform-origin: left top;
  -ms-transform-origin: left top;
  transform-origin: left top;
  -webkit-transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: visibility 0ms linear 250ms,opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  pointer-events: none;
  z-index: 1;
  visibility: hidden;
}

.emotion-2 {
  background-color: #FFF;
  border: solid 1px #BDBDBD;
  border-radius: 4px;
  box-sizing: border-box;
  color: #424242;
  font-size: 16px;
  height: 56px;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  padding-top: 25px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  position: relative;
  width: 100%;
  -webkit-opacity: 1px;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.emotion-4 {
  color: #B30029;
  font-size: 12px;
  margin-top: 2px;
  margin-left: 1px;
  opacity: 0;
  display: none;
  pointer-events: none;
  text-align: left;
  -webkit-transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: opacity 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
}

<div>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-3"
    >
      <label
        className="emotion-0"
        htmlFor="test_id"
      >
        Email
      </label>
      <div
        className="emotion-1"
        id="hint_test_id"
      >
        Enter your email address
      </div>
      <input
        aria-describedby="hint_test_id"
        aria-invalid={false}
        autoComplete="on"
        className="emotion-2"
        defaultValue={null}
        disabled={false}
        id="test_id"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="email"
      />
    </div>
    <div
      aria-atomic={true}
      aria-live="assertive"
      className="emotion-4"
      id="error_test_id"
    />
  </div>
</div>
`;
